--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -11,3 +11,9 @@
 	margin-left : -10px;
 	margin-bottom:-20px;
 }
+
+.form-control[readonly],
+fieldset[disabled] .form-control {
+  background-color: #fff;
+  opacity: 1;
+}
