--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -17,3 +17,14 @@ fieldset[disabled] .form-control {
   background-color: #fff;
   opacity: 1;
 }
+
+.typeahead {
+  z-index: 1051;
+  margin-top: 2px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  top: 50px;
+  left: 15px;
+  display: block;
+}
