--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -28,3 +28,11 @@ fieldset[disabled] .form-control {
   left: 15px;
   display: block;
 }
+
+.table-striped > tbody > tr:nth-of-type(odd) {
+    background-color: #E3F1E8;
+}
+
+.table-striped > tbody > tr {
+    color: #3E3E3E;
+}
